Skip comments and blank lines in property files

--- a/cxx/conf/db.properties
+++ b/cxx/conf/db.properties
@@ -1,5 +1,11 @@
+# Specify the database connection settings
+
+# <username> and <password> to access to the database
 username:	ronald
 password:	ronald
+# <host>:<port> where the database is place
 dbhost:		localhost
 dbport:		3306
+# maximum number of connections allowed
+# IMPORTANT: This value must be lower than the value assigned to the "max_connections" parameter
 max_connections:	5
