Added code comments

--- a/cxx/conf/rest.properties
+++ b/cxx/conf/rest.properties
@@ -1,3 +1,3 @@
-# Specify the <host>:<port> where the rest server will be running
+# Specify the <host>:<port> where the REST service will be running
 host:	localhost
 port:	8000
