--- a/cxx/conf/db.properties
+++ b/cxx/conf/db.properties
@@ -3,9 +3,9 @@
 # <username> and <password> to access to the database
 username:	ronald
 password:	ronald
-# <host>:<port> where the database is place
+# <host>:<port> to establish a connection to the database
 dbhost:		localhost
 dbport:		3306
 # maximum number of connections allowed
-# IMPORTANT: This value must be lower than the value assigned to the "max_connections" parameter
+# IMPORTANT: This value must be lower than the value assigned to the "max_connections" (MySQL) parameter
 max_connections:	5
