--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,57 +1,58 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>DBtoREST</groupId>
-  <artifactId>DBtoREST</artifactId>
-  <version>1.0</version>
-  <name>DBtoREST</name>
-  <packaging>war</packaging>
-  <url>http://localhost:8080</url>
-  <build>
-  	<finalName>DBtoREST</finalName>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-war-plugin</artifactId>
-		  <version>3.0.0</version>
-		  <configuration>
-		  	<webXml>WEB-INF/web.xml</webXml>        
-		  </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-	<dependency>
-	   <groupId>mysql</groupId>
-	   <artifactId>mysql-connector-java</artifactId>
-	   <version>5.1.21</version>
-	</dependency>
-	<dependency>
-	    <groupId>javax.ws.rs</groupId>
-	    <artifactId>javax.ws.rs-api</artifactId>
-	    <version>2.0.1</version>
-	    <scope>provided</scope>
-	</dependency>
-	<dependency>
-	    <groupId>org.glassfish.jersey.containers</groupId>
-	    <artifactId>jersey-container-servlet</artifactId>
-	    <version>2.25</version>
-	</dependency>
-	<!-- if you are using Jersey client specific features without the server side -->
-	<dependency>
-	    <groupId>org.glassfish.jersey.core</groupId>
-	    <artifactId>jersey-client</artifactId>
-	    <version>2.25</version>
-	</dependency>
-  </dependencies>
-  <scm>
-  	<developerConnection>Ronald T. Fernandez</developerConnection>
-  </scm>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>DBtoREST</groupId>
+	<artifactId>DBtoREST</artifactId>
+	<version>1.0</version>
+	<packaging>war</packaging>
+	  <build>
+	  	<finalName>DBtoREST</finalName>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+		    <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-war-plugin</artifactId>
+			  <version>3.0.0</version>
+			  <configuration>
+			  	<webXml>WEB-INF/web.xml</webXml>        
+			  </configuration>
+      		</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-bundle</artifactId>
+			<version>1.19</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>1.19</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-core</artifactId>
+			<version>1.19</version>
+		</dependency>
+	</dependencies>
 </project>
+
