--- a/java/pom.xml
+++ b/java/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>jersey-bundle</artifactId>
 			<version>1.19</version>
 		</dependency>
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>6.0.5</version>
+		</dependency>
 	</dependencies>
 </project>
 
