--- a/java/pom.xml
+++ b/java/pom.xml
@@ -70,6 +70,11 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>6.0.5</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20160810</version>
+		</dependency>
 	</dependencies>
 </project>
 
