--- a/java/pom.xml
+++ b/java/pom.xml
@@ -21,11 +21,15 @@
 			  </configuration>
       		</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<excludes>
+      					<exclude>test/</exclude>
+    				</excludes>
 				</configuration>
 			</plugin>
 	        <plugin>
@@ -74,6 +78,18 @@
 		    <groupId>org.json</groupId>
 		    <artifactId>json</artifactId>
 		    <version>20160810</version>
+		</dependency>
+		<!--  This dependency is needed for the HttpHandler (when the Server is started as standalone application) -->
+		<dependency>
+		    <groupId>com.sun.net.httpserver</groupId>
+		    <artifactId>http</artifactId>
+		    <version>20070405</version>
+		</dependency>
+		<!--  This dependency is needed for the HttpServlet (when the Server is started as a web application) -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>servlet-api</artifactId>
+		    <version>2.5</version>
 		</dependency>
 	</dependencies>
 </project>
