--- a/java/pom.xml
+++ b/java/pom.xml
@@ -21,7 +21,11 @@
 	          <webResources>
 	            <resource>
 	              <!-- this is relative to the pom.xml directory -->
-	              <directory>conf</directory>
+	              <directory>.</directory>
+	              <includes>
+	              	<include>**/*.properties</include>
+	              	<include>**/swagger.json</include>
+	              </includes>
 	            </resource>
 	          </webResources>
 			  </configuration>
